assets/css/bootstrap.css
/* ... */
form.form-centered input {
  padding: .875em;
  font-size: 1.125em;
  display: block;
  width: 100%;
  padding-left: 0;
  padding-right: 0;
  text-indent: .75em;
}
form.form-centered .radio input[type="radio"],
form.form-centered .checkbox input[type="checkbox"] {
  margin-bottom: -17px;
}
form.form-horizontal input {
  padding: 1.25em .875em;
  font-size: 1em;
  display: block;
  width: 96%;
}
form.form-appscore {
  padding: 1em 10%;
}
form.form-appscore input {
  font-size: 1.25em;
  padding: 1em;
}
form h2 {
  margin-bottom: .5em !important;
}
form h2 small {
  display: block;
}
form .error {
  border-color: #e14a59 !important;
  color: #d52335 !important;
}
form .alert {
  clear: both;
}
.features-section {
  padding: 2em 0 !important;
}
.loading,
.loading-block {
  background-image: url(../ui-images/loading.gif);
  background-repeat: no-repeat;
  background-position: 96% 18px;
}
.loading-block {
  min-height: 25em;
  background-position: center center;
}
/* ------------------------
03 Typography
------------------------ */
.alignCenter h1,
.alignCenter h2,
.alignCenter h3,
.alignCenter h4,
.alignCenter h5,
.alignCenter h6,
.alignCenter p {
  text-align: center;
}
h1.alignCenter,
h2.alignCenter,
h3.alignCenter,
h4.alignCenter,
h5.alignCenter,
h6.alignCenter,
p.alignCenter,
small.alignCenter {
  text-align: center;
}
h1.orange,
h2.orange,
h3.orange,
h4.orange,
h5.orange,
h6.orange,
p.orange,
small.orange,
h1.orange a,
h2.orange a,
h3.orange a,
h4.orange a,
h5.orange a,
h6.orange a,
p.orange a,
small.orange a {
  color: #fb7200 !important;
}
h1.blue,
h2.blue,
h3.blue,
h4.blue,
h5.blue,
h6.blue,
p.blue,
small.blue,
h1.blue a,
h2.blue a,
h3.blue a,
h4.blue a,
h5.blue a,
h6.blue a,
p.blue a,
small.blue a {
  color: #26a2fb !important;
}
h1.green,
h2.green,
h3.green,
h4.green,
h5.green,
h6.green,
p.green,
small.green,
h1.green a,
h2.green a,
h3.green a,
h4.green a,
h5.green a,
h6.green a,
p.green a,
small.green a {
  color: #3eae3e !important;
}
h1.purple,
h2.purple,
h3.purple,
h4.purple,
h5.purple,
h6.purple,
p.purple,
small.purple,
h1.purple a,
h2.purple a,
h3.purple a,
h4.purple a,
h5.purple a,
h6.purple a,
p.purple a,
small.purple a {
  color: #7a43b6 !important;
}
h1,
h2,
h3 {
  word-wrap: break-word;
}
h1.logo-headline {
  margin: 1em 0 !important;
}
h1.logo-headline img {
  width: 160px;
  margin: 0 !important;
}
h1.logo-headline.tall img {
  width: auto;
  height: 120px;
  margin-top: -8px;
}
h1.logo-headline.medium img {
  width: auto;
  height: 50px;
}
h1.logo-headline.long img {
  width: auto;
  height: 60px;
}
h1.logo-headline.moveup img {
  top: -6px;
  position: relative;
}
h2 img {
  vertical-align: baseline;
}
p {
  font-size: 1.125em;
  line-height: 1.5;
}
p.download {
  padding: 1.5em 0;
  text-align: center;
  border-top: 1px solid #ddd;
}
p.featured-logos {
  margin: 0;
  text-align: center;
}
p.featured-logos img {
  padding: 10px;
}
.on-dark h1,
.on-dark h2,
.on-dark h5,
.on-dark h6,
.on-dark p,
.on-dark li {
  color: #ffffff;
}
.on-dark h3,
.on-dark h4 {
  color: #fb7200;
  font-weight: 400;
}
.on-dark p.download {
  border-top-color: #50606c;
}
.row-list > .span6 {
  width: 49% !important;
  margin: 0 !important;
  float: left !important;
  border-radius: 3px;
  padding: 20px;
  border: 1px solid #ccc;
}
.row-list > .span6 .orange {
  color: #fb7200;
  font-weight: bold;
}
.row-list > .span6:last-child {
  float: right !important;
}
.row-list > .span6 .span6:last-child {
  text-align: right;
}
.row-list .span6 .row-fluid {
  border-bottom: 1px dashed #ccc;
  padding-bottom: 0;
  margin-top: 5px;
}
ul.feature-list {
  text-align: left;
  list-style: none;
  margin: 0;
  padding: 0;
}
ul.feature-list li {
  background: url(../images/checkmark-large.png) no-repeat 0 4px;
  margin-bottom: 1.65em;
  padding-left: 45px;
  line-height: 1.5 !important;
}
ul.feature-list li strong {
  font-size: 1.250em;
  font-weight: 700;
  text-transform: uppercase;
  display: block;
}
ul.steps {
  text-align: center;
  list-style: none;
  margin: 1em 0;
  padding: 0;
  height: 60px;
  position: relative;
  *zoom: 1;
}
ul.steps:before,
ul.steps:after {
  display: table;
  content: "";
  line-height: 0;
}
ul.steps:after {
  clear: both;
}
ul.steps li {
  height: 4px;
  width: 30%;
  margin: 6px 2px;
  padding: 0;
  display: inline-block;
  text-align: center;
  background: #ddd;
}
ul.steps li:first-child {
  text-align: left;
}
ul.steps li:last-child {
  text-align: right;
}
ul.steps span {
  display: block;
  width: 40px;
  height: 40px;
  text-align: center;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  border: 4px solid #ddd;
  font-size: 20px;
  line-height: 40px;
  font-weight: bold;
  color: #818485;
  background: #ffffff;
  margin: -22px auto 0;
}
ul.steps span.step-label {
  display: none;
  width: 100%;
  height: auto;
  border-radius: 0;
  border: none;
  margin: 0;
  text-transform: uppercase;
  font-size: 14px;
  position: absolute;
  top: 32px;
  left: 0;
  float: none !important;
}
ul.steps li:first-child span {
  float: left;
}
ul.steps li:first-child span.step-label {
  text-align: left;
}
ul.steps li:last-child span {
  float: right;
}
ul.steps li:last-child span.step-label {
  text-align: right;
  left: auto !important;
  right: 0;
}
ul.steps .active {
  background: #fb7200;
}
ul.steps .active span {
  border-color: #fb7200;
  color: #fb7200;
}
ul.steps .active span.step-label {
  display: block;
  text-align: center;
}
ul.step-list {
  text-align: left;
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: 18px;
}
ul.step-list li {
  padding-top: 50px;
  position: relative;
  margin-bottom: 1.65em;
  line-height: 1.5 !important;
}
/* ... */

